--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8rDrxBzMRlgbA7BQ2DoY31gEXzZ4Ours&libraries=marker,geometry,places,maps3d&v=alpha"
+      async
+      defer
+    ></script>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MTC | APP </title>
+    <title>MTC | APP</title>
+
+    <!-- Google Maps API Script -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
