--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,7 @@
+<!-- public/index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
-  <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8rDrxBzMRlgbA7BQ2DoY31gEXzZ4Ours&libraries=marker,geometry,places,maps3d&v=alpha"
-      async
-      defer
-    ></script>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
@@ -13,6 +10,11 @@
     <title>MTC | APP</title>
 
     <!-- Google Maps API Script -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8rDrxBzMRlgbA7BQ2DoY31gEXzZ4Ours&libraries=maps3d&v=alpha"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
